--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^12.4.0",
     "fs": "0.0.1-security",
     "geist": "^1.3.1",
     "glob": "^11.0.3",
@@ -63,6 +64,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "path": "0.12.7",
     "zod": "3.25.67"
   },
   "devDependencies": {
