--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "fs": "0.0.1-security",
     "geist": "^1.3.1",
     "glob": "^11.0.3",
@@ -53,6 +54,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "path": "0.12.7",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -64,7 +66,6 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "path": "0.12.7",
     "zod": "3.25.67"
   },
   "devDependencies": {
